--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,89 @@
 {% extends 'base.html' %} {% block content %}
 
 <section>
-    <div class="container index">
+    <!--random heading section -->
+    <div class="container random">
         <div class="row">
             <div class="center-align index-bg">
-                <span class="indigo-text"><i class="medium material-icons stars">stars</i></span>
-                <h1 class="index-header"><span class="white-text">FIVE!</span></h1>
-                <p><span class="white-text">a simple app to help relieve <br>stress and anxiety in <br>5 simple steps.</span></p>
+                <h4 class="random-header"><span class="white-text">Random Acts of Mindfullness!</span></h4>
+            </div>
+            <div class="center-align random-text">
+                <img src="static/img/ram-emoji.png" alt="emoji of a ram/male sheep" class=" responsive-img">
+                <p>(Random Acts of Mindfullness - RAM)</p>
+                <h5>You can browse through our RAMs below or you can start adding your own!</h5>
+            </div>
+            <div class="center-align random-btn">
+                <a href="{{ url_for('add_ram') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>Add your own 5</a>
             </div>
         </div>
-        <div class="center-align">
-            <img src="static/img/ram-emoji.png" alt="emoji of a ram/male sheep" class="responsive-img">
-        </div>
+    </div>
 
-        <div class="center-align index-btn">
-            <a href="{{ url_for('random') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>Take me to FIVE</a>
-        </div>
+    <div class="container">
 
+        <!--random categories section -->
+
+        <div id="random-tasks" class="row flex">
+            <div class="col s12 m4">
+                <div class="card medium grow">
+                    <div class="card-image">
+                        <div class="card-img">
+                            <img class="responsive-img" src="static/img/tiger.png" alt="tiger">
+                        </div>
+                        <span class="card-title center-align">5 Senses</span>
+                    </div>
+                    <div class="card-content">
+                        <p><span class="number">5 </span> things you see </p>
+                        <p><span class="number">4 </span> things you hear </p>
+                        <p><span class="number">3 </span> things you smell </p>
+                        <p><span class="number">2 </span> things you can touch</p>
+                        <p><span class="number">1 </span> thing you taste </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col s12 m4">
+                <div class="card medium grow">
+                    <div class="card-image">
+                        <div class="card-img">
+                            <img class="responsive-img" src="static/img/owl.png" alt="owl">
+                        </div>
+                        <span class="card-title center-align">5 Sights</span>
+                    </div>
+                    <div class="card-content">
+                        <p><span class="number">5 </span> colors </p>
+                        <p><span class="number">4 </span> shapes </p>
+                        <p><span class="number">3 </span> soft things </p>
+                        <p><span class="number">2 </span> people</p>
+                        <p><span class="number">1 </span> book </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col s12 m4">
+                <div class="card medium grow">
+                    <div class="card-image">
+                        <div class="card-img">
+                            <img class="responsive-img" src="static/img/rabbit.png" alt="rabbit">
+                        </div>
+                        <span class="card-title">5 fun Facts about Rabbits!</span>
+                    </div>
+                    <div class="card-content">
+                        <p><span class="number">1.</span> A female is called a doe</p>
+                        <p><span class="number">2.</span> A male is called a buck</p>
+                        <p><span class="number">3.</span> A baby is called a kit or kitten</p>
+                        <p><span class="number">4.</span> Live for up to 10 years</p>
+                        <p><span class="number">5.</span> Ears as long as a pencil</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="center-align random-end-btn">
+        <a href="{{ url_for('viewtasks') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>See Our 5</a>
     </div>
 
 </section>
-
-<footer class="page-footer white">
-    <div class="footer-copyright">
-        <div class="container orange-text center-align">
-            © 2020 FIVE
-        </div>
-    </div>
-</footer>
 
 {% endblock %}
