--- a/templates/edittask.html
+++ b/templates/edittask.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %} {% block content %}
 <h3>Edit Your Five!</h3>
 <div class="row">
-    <form action="{{ url_for('update_task', task_id=task._id) }}" method="POST" class="col s12">
-        <div class="row">
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">pan_tool</i>
-                    <select id="category" name="category_name">
+	<form action="{{ url_for('update_task', task_id=task._id) }}" method="POST" class="col s12">
+		<div class="row">
+			<div class="row">
+				<div class="input-field col s12">
+					<i class="material-icons prefix">pan_tool</i>
+					<select id="category" name="category_name">
                         <option value="" disabled selected>Choose Category</option>
                         {% for cat in categories %} {% if cat.category_name == task.category_name %}
                         <option value="{{cat.category_name}}" selected>{{cat.category_name}}</option>
@@ -14,29 +14,30 @@
                         <option value="{{cat.category_name}}">{{cat.category_name}}</option>
                         {% endif %} {% endfor %}
                     </select>
-                    <label>Category</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">face</i>
-                    <input id="task_name" name="task_name" type="text" class="validate" value="{{task.task_name}}">
-                    <label for="icon_prefix">My Fav Five</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">create</i>
-                    <textarea name="task_description" id="task_description" class="materialize-textarea">{{task.task_description}}</textarea>
-                    <label for="icon_telephone">Add your 5 here</label>
-                </div>
-            </div>
-            <div class="row">
-                <button class="btn waves-effect waves-light" type="submit" name="action">Add to Five!
+					<label>Category</label>
+				</div>
+			</div>
+			<div class="row">
+				<div class="input-field col s12">
+					<i class="material-icons prefix">face</i>
+					<input id="task_name" name="task_name" type="text" class="validate" value="{{task.task_name}}">
+					<label>My Fav Five</label>
+				</div>
+			</div>
+			<div class="row">
+				<div class="input-field col s12">
+					<i class="material-icons prefix">create</i>
+					<textarea name="task_description" id="task_description" class="materialize-textarea">{{task.task_description}}</textarea>
+					<label>Add your 5 here</label>
+				</div>
+			</div>
+			<div class="row">
+				<button class="btn waves-effect waves-light" type="submit" name="action">Add to Five!
                     <i class="material-icons right">add</i>
                 </button>
-            </div>
-    </form>
-    </div>
+			</div>
+		</div>
+	</form>
+</div>
 
-    {% endblock %}
+{% endblock %}
