--- a/templates/categories.html
+++ b/templates/categories.html
@@ -3,14 +3,14 @@
     <div class="row">
         <!--category heading section -->
         <div class="container random">
-                <div class="row center-align">
-                    <div class="index-bg">
-                        <h4 class="random-header"><span class="white-text">Categories</span></h4>
-                    </div>
-                    <div class="cat_text">
-                        <h5>You can edit the existing Categories or add a new one!</h5>
-                    </div>
+            <div class="row center-align">
+                <div class="index-bg">
+                    <h4 class="random-header"><span class="white-text">Categories</span></h4>
                 </div>
+                <div class="cat_text">
+                    <h5>You can edit the existing Categories or add a new one!</h5>
+                </div>
+            </div>
             <!--add category button -->
             <div class="row">
                 <ul class="collapsible" data-collapsible="accordion">
@@ -40,7 +40,8 @@
                 <img src="static/img/ram-emoji.png" alt="emoji of a ram/male sheep" class="responsive-img">
             </div>
             <br>
-            <h6><span class="orange-text"><i class="material-icons prefix">star_border</i>things that make you hmmm hmmm hmmm<i class="material-icons prefix">star_border</i></span></h6>
+            <h6><span class="orange-text"><i class="material-icons prefix">star_border</i>things that make you hmmm hmmm hmmm<i class="material-icons prefix">star_border</i></span>
+				</h6>
             <br>
         </div>
     </div>
