--- a/templates/addcategory.html
+++ b/templates/addcategory.html
@@ -1,13 +1,11 @@
-{% extends 'base.html'%}
-
-{% block content %}
+{% extends 'base.html'%} {% block content %}
 <section>
     <div class="container add-categories">
-            <div class="row center-align">
-                <div class="index-bg">
-                     <h4 class="random-header"><span class="white-text">Add a new Category</span></h4>
-                </div>
+        <div class="row center-align">
+            <div class="index-bg">
+                <h4 class="random-header"><span class="white-text">Add a new Category</span></h4>
             </div>
+        </div>
         <div class="row">
             <form action="{{ url_for('insert_category') }}" method="POST" class="col s12">
                 <div class="row">
@@ -23,13 +21,14 @@
                 </div>
             </form>
             <div class="center-align">
-            <div>
-                <img src="static/img/ram2.png" alt="emoji of a ram/male sheep" class="responsive-img">
+                <div>
+                    <img src="static/img/ram2.png" alt="emoji of a ram/male sheep" class="responsive-img">
+                </div>
+                <br>
+                <h6><span class="orange-text"><i class="material-icons prefix">star_border</i>things that make you smile<i class="material-icons prefix">star_border</i></span>
+					</h6>
+                <br>
             </div>
-            <br>
-            <h6><span class="orange-text"><i class="material-icons prefix">star_border</i>things that make you smile<i class="material-icons prefix">star_border</i></span></h6>
-            <br>
-        </div>
         </div>
     </div>
 </section>
