--- a/templates/about.html
+++ b/templates/about.html
@@ -6,17 +6,16 @@
         <div class="row">
                 <div class="center-align index-bg">
                     <span class="indigo-text"><i class="medium material-icons stars">stars</i></span>
-                    <h1 class="index-header"><span class="white-text">About FIVE!</span></h1>
+                    <h1 class="index-header"><span class="white-text">FIVE</span></h1>
                     <p><span class="white-text">a simple app to help relieve <br>stress and anxiety in <br>5 simple steps.</span></p>
                 </div>
         </div>
-
         <div class="center-align index-btn">
             <a href="{{ url_for('get_categories') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>Take me to 5 now</a>
-        </div>
-        
+                <h6><span class="orange-text"><i class="material-icons prefix">star_border</i>things that make you smile<i class="material-icons prefix">star_border</i></span>
+				</h6>
+        </div>    
     </div>
-
 </section>
 
 {% endblock %}
