--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,8 @@
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
                     <li><a href="{{ url_for('random') }}"><span class="orange-text">RAM</span></a></li>
-                    <li><a href="{{ url_for('add_ram') }}"><span class="orange-text">Add your 5</span></a></li>
+                    <li><a href="{{ url_for('viewtasks') }}"><span class="orange-text">Our 5</span></a></li>
+                    <li><a href="{{ url_for('add_ram') }}"><span class="orange-text">Your 5</span></a></li>
                     <li><a href="{{ url_for('get_categories') }}"><span class="orange-text">Add new Category</span></a>
                     </li>
                     <li><a href="{{ url_for('about') }}"><span class="orange-text">About</span></a></li>
