--- a/templates/categories.html
+++ b/templates/categories.html
@@ -31,7 +31,7 @@
         <!--add category button -->
         <div class="row center-align">
             <a href="{{ url_for('add_category') }}" class="waves-effect waves-light btn">
-                <i class="material-icons right">add</i>Add Category
+                <i class="material-icons right">add</i>Add new Category
             </a>
         </div>
         <!--add go to tasks button -->
