Changing images to suit user feedback

--- a/templates/random.html
+++ b/templates/random.html
@@ -27,7 +27,7 @@
                 <div class="card medium grow">
                     <div class="card-image">
                         <div class="card-img">
-                            <img class="responsive-img" src="static/img/tiger.png" alt="tiger">
+                            <img class="responsive-img" src="static/img/leaf.jpg" alt="autumn leaf">
                         </div>
                         <span class="card-title center-align">5 Senses</span>
                     </div>
@@ -45,7 +45,7 @@
                 <div class="card medium grow">
                     <div class="card-image">
                         <div class="card-img">
-                            <img class="responsive-img" src="static/img/owl.png" alt="owl">
+                            <img class="responsive-img" src="static/img/dandelion.jpg" alt="close up of a dendelion">
                         </div>
                         <span class="card-title center-align">5 Sights</span>
                     </div>
@@ -63,9 +63,9 @@
                 <div class="card medium grow">
                     <div class="card-image">
                         <div class="card-img">
-                            <img class="responsive-img" src="static/img/rabbit.png" alt="rabbit">
+                            <img class="responsive-img" src="static/img/rabbit.jpg" alt="close up of a rabbit">
                         </div>
-                        <span class="card-title">5 fun Facts about Rabbits!</span>
+                        <span class="card-title">5 fun facts about Rabbits!</span>
                     </div>
                     <div class="card-content">
                         <p><span class="number">1.</span> A female is called a doe</p>
