Editing Random page to add styled box

--- a/templates/random.html
+++ b/templates/random.html
@@ -79,10 +79,14 @@
 
         </div>
     </div>
-
+            <div class="add_ram_btn center-align">
+                <span class="indigo-text add-star"><i class="medium material-icons stars">stars</i></span>
+                <h6><strong>Can't find a category to put your fav 5 into? Have a look at our full list of Categories</strong></h6>
+                <br>
     <div class="center-align random-end-btn">
         <a href="{{ url_for('viewtasks') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>See Our 5</a>
     </div>
+            </div>
 
 </section>
 
