--- a/templates/add_ram.html
+++ b/templates/add_ram.html
@@ -62,7 +62,7 @@
                 <span class="indigo-text add-star"><i class="medium material-icons stars">stars</i></span>
                 <h6><strong>Can't find a category to put your fav 5 into? Have a look at our full list of Categories</strong></h6>
                 <div class="index-btn">
-                    <a href="{{ url_for('get_categories') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>See all category</a>
+                    <a href="{{ url_for('get_categories') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>See all categories</a>
                 </div>
             </div>
         </div>
