Add user stories to Readme

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('random') }}"><span class="orange-text">RAM</span></a></li>
                     <li><a href="{{ url_for('viewtasks') }}"><span class="orange-text">View All</span></a></li>
-                    <li><a href="{{ url_for('add_ram') }}"><span class="orange-text">Add your 5</span></a></li>
+                    <li><a href="{{ url_for('add_ram') }}"><span class="orange-text">Add new 5</span></a></li>
                     <li><a href="{{ url_for('get_categories') }}"><span class="orange-text">Add new Category</span></a>
                     </li>
                     <li><a href="{{ url_for('about') }}"><span class="orange-text">About</span></a></li>
@@ -31,8 +31,8 @@
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
                     <li><a href="{{ url_for('random') }}"><span class="orange-text">RAM</span></a></li>
-                    <li><a href="{{ url_for('viewtasks') }}"><span class="orange-text">View All</span></a></li>
-                    <li><a href="{{ url_for('add_ram') }}"><span class="orange-text">Add your 5</span></a></li>
+                    <li><a href="{{ url_for('viewtasks') }}"><span class="orange-text">View all</span></a></li>
+                    <li><a href="{{ url_for('add_ram') }}"><span class="orange-text">Add new 5</span></a></li>
                     <li><a href="{{ url_for('get_categories') }}"><span class="orange-text">Add new Category</span></a>
                     </li>
                     <li><a href="{{ url_for('about') }}"><span class="orange-text">About</span></a></li>
