--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@ body {
 
 
 /** navbar **/
-. nav-wrapper {
+.nav-wrapper {
     position: absolute;
     z-index: 0; 
 }
@@ -107,6 +107,10 @@ body {
 
 .card .card-image .card-title {
     color:  #424242;
+}
+
+.card-img {
+    height: 200px;
 }
 
 .random-btn {
