Editing card text

--- a/templates/random.html
+++ b/templates/random.html
@@ -65,7 +65,7 @@
                         <div class="card-img">
                             <img class="responsive-img" src="static/img/rabbit.jpg" alt="close up of a rabbit">
                         </div>
-                        <span class="card-title">5 fun facts about Rabbits!</span>
+                        <span class="card-title center-align">5 Rabbits facts!</span>
                     </div>
                     <div class="card-content">
                         <p><span class="number">1.</span> A female is called a doe</p>
