--- a/templates/editcategory.html
+++ b/templates/editcategory.html
@@ -1,28 +1,30 @@
 {% extends 'base.html' %} {% block content %}
+<!--edit category heading section -->
 <section>
-    <div class="container random">
-        <div class="row center-align">
-            <div class="index-bg">
-                <h4 class="random-header"><span class="white-text">Edit Category</span></h4>
-            </div>
-        </div>
-        <br>
-            <div class="row">
-                <form action="{{ url_for('update_category', category_id=category._id) }}" method="POST" class="col s12">
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <i class="material-icons prefix">poll</i>
-                            <input id="category_name" name="category_name" type="text" class="validate" value="{{category.category_name}}">
-                            <label for="category_name">Category Name</label>
-                        </div>
-                    </div>
-                    <div class="row center-align">
-                        <button class="btn waves-effect waves-light" type="submit" name="action">Save Changes<i class="material-icons right">add</i>
+	<div class="container random">
+		<div class="row center-align">
+			<div class="index-bg">
+				<h4 class="random-header"><span class="white-text">Edit Category</span></h4>
+			</div>
+		</div>
+		<br>
+		<!--edit category formsection -->
+		<div class="row">
+			<form action="{{ url_for('update_category', category_id=category._id) }}" method="POST" class="col s12">
+				<div class="row">
+					<div class="input-field col s12">
+						<i class="material-icons prefix">poll</i>
+						<input id="category_name" name="category_name" type="text" class="validate" value="{{category.category_name}}">
+						<label for="category_name">Category Name</label>
+					</div>
+				</div>
+				<div class="row center-align">
+					<button class="btn waves-effect waves-light" type="submit" name="action">Save Changes<i class="material-icons right">add</i>
                         </button>
-                    </div>
-                </form>
-            </div>
-    </div>
+				</div>
+			</form>
+		</div>
+	</div>
 
 </section>
 {% endblock %}
