--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,10 @@ body {
     z-index: 0; 
 }
 
+#sidenav-overlay {
+   background-color: rgba(0,0,0,0.05);
+}
+
 .brand-logo {
     margin-left: 10px;
 }
