--- a/templates/base.html
+++ b/templates/base.html
@@ -37,15 +37,15 @@
 					<li><a href="{{ url_for('about') }}"><span class="orange-text">About</span></a></li>
 				</ul>
 			</div>
+            <ul class="side-nav" id="mobile-demo">
+                <li><a href="{{ url_for('random') }}"><span class="orange-text">RAM</span></a></li>
+                <li><a href="{{ url_for('viewtasks') }}"><span class="orange-text">View all</span></a></li>
+                <li><a href="{{ url_for('add_ram') }}"><span class="orange-text">Add new 5</span></a></li>
+                <li><a href="{{ url_for('get_categories') }}"><span class="orange-text">Add new Category</span></a>
+                </li>
+                <li><a href="{{ url_for('about') }}"><span class="orange-text">About</span></a></li>
+            </ul>
 		</nav>
-        	<ul class="side-nav white" id="slide-out">
-				<li><a href="{{ url_for('random') }}"><span class="orange-text">RAM</span></a></li>
-				<li><a href="{{ url_for('viewtasks') }}"><span class="orange-text">View All</span></a></li>
-				<li><a href="{{ url_for('add_ram') }}"><span class="orange-text">Add new 5</span></a></li>
-				<li><a href="{{ url_for('get_categories') }}"><span class="orange-text">Add new Category</span></a>
-				</li>
-				<li><a href="{{ url_for('about') }}"><span class="orange-text">About</span></a></li>
-			</ul>
 	</header>
 
 	<!----jinja block---->
@@ -61,9 +61,7 @@
 		$(document).ready(function() {
             $('.collapsible').collapsible();
             $('select').material_select();
-            $(".button-collapse").sideNav({
-                closeOnClick: true
-                }
+            $(".button-collapse").sideNav(
             );
         });
 	</script>
