--- a/static/css/style.css
+++ b/static/css/style.css
@@ -172,3 +172,85 @@ body {
 .about-btn {
     margin: 10px;
 }
+
+/** 404 page **/
+#error-page {
+    background-image: linear-gradient(to bottom right, rgb(255, 123, 0), orange)
+}
+
+.page-wrap {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+#error-page h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    color: white;
+    font-size: 320px;
+    font-weight: 900;
+    animation: facein 0.8s ease-out 1.5s forwards;
+    opacity: o;
+}
+
+.error-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@keyframes fadein {
+   0% {
+       opacity: 0;
+   }
+   100% {
+       opacity: 0.2;
+   }
+}
+
+#error-page h2 {
+    color: white;
+    font-size: 48px;
+    margin-bottom: 100px;
+    animation: slidedown 1s ease-out 0.5s forwards;
+    transform: translateY(-200px);
+    opacity: 0;
+}
+
+.error-ram {
+    animation: slidedown 1s ease-out 1s;
+}
+
+.error-btn {
+    animation: slideup 1s ease-out 0.5s forwards;
+    transform: translateY(-200px);
+    opacity: 1;
+}
+
+@keyframes slidedown {
+    0% {
+       transform: translateY(-200px);
+       opacity: 0;
+   }
+   100% {
+       transform: translateY(0px);
+       opacity: 1;
+   }
+}
+
+@keyframes slideup {
+    0% {
+       transform: translateY(-200px);
+       opacity: 0;
+   }
+   100% {
+       transform: translateY(0px);
+       opacity: 1;
+   }
+}
